# windows-capture-rs

./: .gitignore  Cargo.toml  README.md  cspell.config.yaml  pyproject.toml  taskfile.yaml
.github/config/: windows-capture.dict
.github/workflows/: python.yml
examples/: cli.rs
src/: capture.rs  d3d11.rs  encoder.rs  frame.rs  graphics_capture_api.rs  monitor.rs  window.rs
windows-capture-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
windows-capture-python/windows_capture/: __init__.py
