[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "windows-capture"
version = "1.4.2"
description = "Fastest Windows Screen Capture Library For Python 🔥"
readme = "windows-capture-python/README-Python.md"
requires-python = ">=3.9"
license = {file="LICENSE"}
authors = [{ name = "NiiightmareXD" }]
keywords = ["screen", "capture", "screenshot", "graphics", "windows"]
dependencies = ["numpy", "opencv-python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Multimedia :: Video :: Capture",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "./windows-capture-python/windows_capture/"
module-name = "windows_capture"

[tool.uv]
managed = true
package = true
link-mode = "copy"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "maturin>=1.7.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
    "pylint>=3.2.6",
    "ruff>=0.5.7",
    "pip>=24.2",
]
